--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,37 @@
-body {
+@import "./base.scss";
+
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body {
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-weight: 300;
+  line-height: 1.6;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+
+  font-size: 62.5%; //  10/16=62.5%  -> 1rem=10px
+
+  @include respons(large) {
+    font-size: 50%;
+  }
+
+
+
 }
 
 code {
